# wati-conductor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  chat.py  clean_history.py  docker-compose.yaml  main.py  pyproject.toml  reset_mock_data.py
assets/social-preview/: README.md  preview.html
conductor/: __init__.py  cli.py  config.py  history.py
conductor/agent/: __init__.py  graph.py  llm_factory.py  parser.py  planner.py  react_graph.py  react_nodes.py
conductor/agent/nodes/: __init__.py  clarify.py  execute.py  parse.py  plan.py  response.py  validate.py
conductor/clients/: __init__.py  base.py  factory.py  mock.py  real.py
conductor/data/: __init__.py  staff.py
conductor/models/: __init__.py  intent.py  plan.py  state.py  wati.py
conductor/tools/: __init__.py  contacts.py  messages.py  operators.py  registry.py  templates.py  tickets.py
docs/: CHANGELOG.md  COMPLETION_REPORT.md  DOCKER.md  DOCKER_SUMMARY.md  FINAL_SUMMARY.md  MULTI_TASK_ARCHITECTURE.md  SESSION_PROGRESS.md  WATI_API_SETUP.md  architecture.md  components.md  demo_scripts.md  dev-notes.md  function_checklist.md  index.md  roadmap.md  setup.md  status.md
docs/specs/react-refactor/: design.md  requirements.md
docs/specs/v1/: OVERVIEW.txt  README.md  SUMMARY.md  design.md  requirements.md  tasks.md
docs/specs/v2/: README.md  (+1 more)
docs/v2/: refactor-plan.md
docs/zachary/: build_notes.md  problem_framing.md
mkdocs/: Dockerfile  docker-compose.docs.yml  mkdocs.yml
tests/: manual_test_flow.py  manual_test_graph.py  manual_test_parser.py  test_parser.py  test_planner.py
