[tool.poetry]
name = "wati-conductor"
version = "0.1.0"
description = "AI agent that translates natural language into WATI WhatsApp API workflows"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "conductor"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.0"
langgraph = "^0.2.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
httpx = "^0.27.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
rich = "^13.0"
tenacity = "^9.0"
python-dotenv = "^1.0"
typer = "^0.12.0"
click = ">=8.1.0,<8.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
black = "^24.0"
isort = "^5.13"
mypy = "^1.8"
ruff = "^0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
conductor = "conductor.cli:app"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"
